<resources>
    <string name="app_name">Eletric Cars</string>
    <string name="carros_eletricos">Carros Eletricos</string>
    <string name="tv_carros">Carros</string>
    <string name="tv_favoritos">Favoritos</string>
    <string name="tv_preco">Preco</string>
    <string name="tv_precoValor">120.000,00</string>
    <string name="tv_bateria">Bateria</string>
    <string name="tv_bateriaValor">94,3 Kwh</string>
    <string name="tv_potencia">Potencia</string>
    <string name="tv_potenciaValor">646 vc</string>
    <string name="tv_recarga">Recarga</string>
    <string name="tv_recargaValor">23 min</string>
    <string name="et_precokwh">Preco Kwh</string>
    <string name="et_kmPercorrido">Km percorrido</string>
    <string name="calcular">Calcular Autonomia</string>
    <string name="iv_representacao_de_carro">Representacao de carro</string>
    <string name="calcule_a_autonomia_do_carro">Calcule a autonomia do carro</string>
    <string name="btn_resultado">resultado</string>
    <string name="fragment_car">Carros</string>
    <string name="favorite_fragmet">Favoritos</string>
    <string name="tv_nocenetion">Ops. Parece que não há conexão</string>
    <string name="response_erro">Algo deu errado, tente mais tarde</string>
    <string name="saved_calc">saved calc</string>
</resources>